--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href="css/animate.min.css" rel="stylesheet">
     
-    <!-- Custom styles for this template -->
-    <link href="css/resume.css" rel="stylesheet">
   </head>
 
   <body>
@@ -32,7 +30,14 @@
             </div>
         </div>
     </div>
+	
  <toaster-container toaster-options="{'time-out': 3000}"></toaster-container>
+	<div class="center">
+		<div class="footerBox">
+			<p class="footerLinks"> 
+			<a href="mailto:lrg37@pitt.edu">Contact |</a> <a href="http://localhost/fakenews_detector_prototype/"> Home |</a> <a href="mailto:advertise@pitt.edu"> Advertise</a></p><p> This site is created and maintained by <a href="http://www.pitt.edu/~lrg37/" target="_blank">Team Fake News</a>. <br> This website is a non-profit and non-commercial prototype.</p>
+		</div>
+	</div>
 	<script src="lib/angular.min.js"></script>
 	<script src="lib/ui-bootstrap-tpls-0.11.2.min.js"></script>
 	<script src="lib/angular-route.min.js"></script>
@@ -59,4 +64,5 @@
     <script src="js/shoppingCart.js" type="text/javascript"></script>
     -->
   </body>
+  
 </html>
