--- a/index_1.html
+++ b/index_1.html
@@ -6,17 +6,21 @@
 		<title>Facebook post template</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <script>
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover();   
+});
+</script>
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="css/dc3.css" rel="stylesheet" type="text/css">
-		<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 		<link href="css/stylespost.css" rel="stylesheet">
 	</head>
-<body>
+	<body>
 <div class="wrapper">
     <div class="box">
         <div class="row row-offcanvas row-offcanvas-left">
@@ -27,7 +31,7 @@
                 <!-- top nav -->
               	<div class="navbar navbar-blue navbar-static-top">  
                     <div class="navbar-header">
-                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="navbar-collapse">
+                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle</span>
                         <span class="icon-bar"></span>
           				<span class="icon-bar"></span>
@@ -70,7 +74,6 @@
                   	</nav>
                 </div>
                 <!-- /top nav -->
-					
 				<div ng-view></div>
                 
 </div>
@@ -105,23 +108,20 @@
 	<script src="lib/angular-route.min.js"></script>
 	<script src="lib/angular-animate.min.js" ></script>
 	<script src="lib/toaster.js"></script>
-	<script type="text/javascript" src="lib/canvasjs.min.js"></script>
-	<script type="text/javascript" src="lib/d3.js"></script>
-	<script type="text/javascript" src="lib/crossfilter.js"></script>
-	<script type="text/javascript" src="lib/dc3.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+	
 	<!-- Some Bootstrap Helper Libraries -->
 	<script src="lib/bootstrap.min.js"></script>
 	<script src="lib/underscore.min.js"></script>
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 	<script src="lib/ie10-viewport-bug-workaround.js"></script>
-
+	
 	<script src="js/app.js" type="text/javascript"></script>
 	<script src="js/controller.js" type="text/javascript"></script>
 	<script src="js/product.js" type="text/javascript"></script>
 	<script src="js/store.js" type="text/javascript"></script>
 	<!-- script references -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+		<script src="lib/bootstrap.min.js"></script>
 
-	<script src="lib/bootstrap.min.js"></script>
 	</body>
 </html>
